CSS Layout & Position - fixed position - positioned fixed relative to the viewport itself so when scrolling the header for example stays fixed. z-index pushes things forward or brings them out on a page. by default everything on a page has a z-index of 0. By default header h1 is a block level element so it takes up the full width of the page and we can't use inline element because then padding and margin don't come out properly(margin not added to the top or bottom and padding collapses in a vertical manner when screen size shrinks). Inline block gives us the best of both in that it will still sit next to other elements on the page but will allow us to to treat margin and padding as block level. border-radius helps us give a curved corner on the element.

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,23 @@
 header{
-
+background-color: #F63232;
+padding: 20px;
+text-align: center;
+position: fixed;
+width: 100%;
+/* pushes the content forward. by default this is 0 */
+z-index: 1;
+/* 0 from the top of the page. hugs the top of the page so no white spaces show */
+top:0;
+/* 0 from the left of the page. hugs the left of the page so no white spaces show */
+left:0;
+}
+header h1{
+  color: white;
+  border: 8px solid white;
+ /* TRBL Top/Bottom Right/Left */
+  padding: 6px 12px;
+  display: inline-block;
+  border-radius: 36px;
 }
 .banner{
   position: relative;
